src/parser/snapshots/monkey_language_server__parser__test__if_expr_unhappy_3.snap
---
source: src/parser/test.rs
description: "if (x) { let x = 1; x < }"
expression: result
---
[
    If {
        token: Token(If, "if", (0,0)->(0,2)),
        condition: Ok(
            Identifier {
                token: Token(Identifier, "x", (0,4)->(0,5)),
                name: "x",
            },
        ),
        consequence: Ok(
            Block {
                token: Token(LBrace, "{", (0,7)->(0,8)),
                statements: [
                    Let {
                        token: Token(Let, "let", (0,9)->(0,12)),
                        name: Identifier {
                            token: Token(Identifier, "x", (0,13)->(0,14)),
                            name: "x",
                        },
                        value: Int {
                            token: Token(Int, "1", (0,17)->(0,18)),
                            value: 1,
                        },
                        range: Range {
                            start: Position {
                                line: 0,
                                character: 9,
                            },
                            end: Position {
                                line: 0,
                                character: 19,
                            },
                        },
                    },
                    Err(UnexpectedToken("SyntaxError: Unexpected '}'."), (0,22)->(0,23)),
                ],
                range: Range {
                    start: Position {
                        line: 0,
                        character: 7,
                    },
                    end: Position {
                        line: 0,
                        character: 24,
                    },
                },
            },
        ),
        alternative: Ok(
            None,
        ),
        range: Range {
            start: Position {
                line: 0,
                character: 0,
            },
            end: Position {
                line: 0,
                character: 25,
            },
        },
    },
]

===================================

if (x) { let x = 1; x < }
                      ^ [Error] SyntaxError: Unexpected '}'.
